--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <a-scene>
   <a-assets>
-  　<video id="video" src="360VR.mp4" preload="auto" autoplay></video>
+  　<video id="video" src="360VR.mp4" preload="auto" autoplay muted></video>
   </a-assets>
   <a-videosphere src="#video" rotation="0 -65 0"></a-videosphere>
   <!-- 動画の autoplay が効かない場合用の、再生・停止ボタン -->
@@ -40,7 +40,7 @@ btnStop.addEventListener("click", (e) => {        // クリックされたら
 
 <script>
   function toLink(){
-    window.location.href = "./index2.html"
+    window.location.href = "https://19j5126.github.io/rei2/"
   }
 
   AFRAME.registerComponent('link1', {
