--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script src="play-on-touch.js"></script>
 </head>
 <body>
-<a-scene>
+<a-scene id="scene" id="scene2"  >
   <a-assets>
   　<video id="video" src="360VR.mp4" preload="auto" autoplay></video>
   </a-assets>
